; ModuleID = '/home/carl/AnghaBench/reactos/base/applications/mstsc/extr_secure.c_sec_encrypt.c'
source_filename = "/home/carl/AnghaBench/reactos/base/applications/mstsc/extr_secure.c_sec_encrypt.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@g_sec_encrypt_use_count = common dso_local global i32 0, align 4
@g_sec_encrypt_key = common dso_local global i64 0, align 8
@g_sec_encrypt_update_key = common dso_local global i32 0, align 4
@g_rc4_encrypt_key = common dso_local global i32 0, align 4
@g_rc4_key_len = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32)* @sec_encrypt to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @sec_encrypt(i32* %0, i32 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* @g_sec_encrypt_use_count, align 4
  %6 = icmp eq i32 %5, 4096
  br i1 %6, label %7, label %16

7:                                                ; preds = %2
  %8 = load i64, i64* @g_sec_encrypt_key, align 8
  %9 = load i32, i32* @g_sec_encrypt_update_key, align 4
  %10 = call i32 @sec_update(i64 %8, i32 %9)
  %11 = load i32, i32* @g_rc4_encrypt_key, align 4
  %12 = load i64, i64* @g_sec_encrypt_key, align 8
  %13 = inttoptr i64 %12 to i8*
  %14 = load i32, i32* @g_rc4_key_len, align 4
  %15 = call i32 @rdssl_rc4_set_key(i32 %11, i8* %13, i32 %14)
  store i32 0, i32* @g_sec_encrypt_use_count, align 4
  br label %16

16:                                               ; preds = %7, %2
  %17 = load i32, i32* @g_rc4_encrypt_key, align 4
  %18 = load i32*, i32** %3, align 8
  %19 = bitcast i32* %18 to i8*
  %20 = load i32*, i32** %3, align 8
  %21 = bitcast i32* %20 to i8*
  %22 = load i32, i32* %4, align 4
  %23 = call i32 @rdssl_rc4_crypt(i32 %17, i8* %19, i8* %21, i32 %22)
  %24 = load i32, i32* @g_sec_encrypt_use_count, align 4
  %25 = add nsw i32 %24, 1
  store i32 %25, i32* @g_sec_encrypt_use_count, align 4
  ret void
}

declare dso_local i32 @sec_update(i64, i32) #1

declare dso_local i32 @rdssl_rc4_set_key(i32, i8*, i32) #1

declare dso_local i32 @rdssl_rc4_crypt(i32, i8*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
